<resources>
    <string name="app_name">Smog Widget</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="error_occurred">An error occurred.</string>
    <string name="no_location_access">Could not access location data</string>
    <string name="multiple_station_widget_config">To use this widget you have to grant permission
        to access device\'s location data.</string>
    <string name="request_location_permission">grant permission</string>
    <string name="start_widget">start widget</string>
    <string name="empty_view_text">No data</string>
    <string name="refresh">refresh</string>
    <string name="could_not_connect_to_server">Could not connect to server</string>
    <string name="display_refresh_button">display refresh button</string>
    <string name="reload_data">Reload data</string>
    <string name="find_nearest_station">Find nearest station</string>
    <string name="sort_stations_by_distance">Sort stations by distance</string>
    <string name="sort_stations_by_city_name">Sort stations by city name</string>
    <string name="select_station_to_display">Select station to display in widget</string>
    <string name="sort_by_city_name">Sort by city name</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="multiple_station_widget_config_activity_explanation">Widget displays highest percent values from 5 nearest stations. Orange text color means that no up-to-date data is available.</string>
    <string name="station_name">Station name</string>
    <string name="no_data">No data</string>
</resources>
