<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/card_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple_station_widget_config"
        android:textColor="@android:color/primary_text_light"/>

    <Button
        android:id="@+id/requestPermissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_location_permission"/>

    <CheckBox
        android:id="@+id/displayRefreshButtonCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_refresh_button"
        android:textColor="@android:color/primary_text_light"/>
    <Button 
        android:id="@+id/widgetStartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_widget"/>
    

</LinearLayout>
